[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Menu/BoxMenu/BoxMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resource/Theme/SlimButton.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Font/HollowFont-regular, bold, italic.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Gui/PauseMenu/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Gui/OptionMenu/OptionMenu.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )

[node name="NinePatchRect" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 13 )
text = "PAUSE"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -32.5
margin_right = 34.0
margin_bottom = 32.5
alignment = 1

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer"]
margin_right = 68.0
margin_bottom = 19.0
text = "Resume"
flat = true

[node name="OptionButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 23.0
margin_right = 68.0
margin_bottom = 42.0
text = "Option"
flat = true

[node name="ExitButton" type="Button" parent="Control/VBoxContainer"]
margin_top = 46.0
margin_right = 68.0
margin_bottom = 65.0
text = "Exit Stage"
flat = true

[node name="OptionMenu" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="Control/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="exited" from="OptionMenu" to="." method="_on_OptionMenu_exited"]
